fix overflow of screen

--- a/src/components/MonsterCard.css
+++ b/src/components/MonsterCard.css
@@ -28,6 +28,10 @@ a {
   width: 40%;
 }
 
+.monster-container-style {
+  max-width: 100%;
+}
+
 .monster-card-dark {
   background-color: #ce4177;
 }
@@ -51,7 +55,7 @@ a {
 }
 
 .monster-details-style {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   font-size: 1.3rem;
 }
@@ -63,7 +67,7 @@ a {
 }
 
 .monster-details-style .details-container {
-  margin: 0 -12px;
+  max-width: 100vw;
   border-top: 10px solid #dc4782;
   background-color: #ce4177;
   display: block;
@@ -78,6 +82,6 @@ a {
   border: 2px solid white;
   position: relative;
   top: 1rem;
-  left: -45%;
+  left: -42%;
   height: 2.5rem;
 }
